Style: adequação de estilos
melhoramento de estilos do menu tabs lateral

--- a/app/templates/admin/admin.html
+++ b/app/templates/admin/admin.html
@@ -1,6 +1,6 @@
 {% extends 'home.html'%}
 {% block main %}
-<article>
+<article style="height: 100%;" class="border border-black">
     <div class="container-fluid d-flex align-items-start">
         <header>
             <nav>
