--- a/app/templates/admin/admin.html
+++ b/app/templates/admin/admin.html
@@ -1,59 +1,44 @@
 {% extends 'home.html'%}
 {% block main %}
-<article style="height: 100%;" class="border border-black">
-    <div class="container-fluid d-flex align-items-start">
-        <header>
-            <nav>
-                <ul class="nav nav-pills flex-column border-end border-3 me-3 align-items-end" id="pills-tab"
-                    role="tablist">
-                    <li class="nav-item" role="presentation">
-                        <button class="nav-link text-primary fw-semibold active position-relative" data-bs-toggle="pill"
-                            data-bs-target="#pills-professores" type="button" role="tab"
-                            aria-controls="pills-professores" aria-selected="true">Professores</button>
-                    </li>
-                    <li class="nav-item" role="presentation">
-                        <button class="nav-link text-primary fw-semibold position-relative" data-bs-toggle="pill"
-                            data-bs-target="#pills-alunos" type="button" role="tab" aria-controls="pills-alunos"
-                            aria-selected="false">Alunos</button>
-                    </li>
-                    <li class="nav-item" role="presentation">
-                        <button class="nav-link fw-semibold position-relative" data-bs-toggle="pill"
-                            data-bs-target="#pills-disciplinas" type="button" role="tab"
-                            aria-controls="pills-disciplinas" aria-selected="false">Disciplinas</button>
-                    </li>
-                    <li class="nav-item" role="presentation">
-                        <button class="nav-link fw-semibold position-relative" data-bs-toggle="pill"
-                            data-bs-target="#pills-relatorios" type="button" role="tab" aria-controls="pills-relatorios"
-                            aria-selected="false">Relatorios</button>
-                    </li>
-                </ul>
-
-            </nav>
-        </header>
-        <main>
-            <div class="tab-content border rounded-3 border-primary p-3 text-danger w-100" id="pills-tabContent">
-                <div class="tab-pane fade show active" id="pills-professores" role="tabpanel"
-                    aria-labelledby="pills-professores-tab">
-                    <H2>Professores</H2>
-                </div>
-                <div class="tab-pane fade" id="pills-alunos" role="tabpanel"
-                    aria-labelledby="pills-alunos-tab">
-                    <H2>Alunos</H2>
-                </div>
-                <div class="tab-pane fade" id="pills-disciplinas" role="tabpanel"
-                    aria-labelledby="pills-disciplinas-tab">
-                    <H2>Disciplinas</H2>
-                </div>
-                <div class="tab-pane fade" id="pills-relatorios" role="tabpanel"
-                    aria-labelledby="pills-relatorios-tab">
-                    <H2>Relatorios</H2>
-                </div>
-            </div>
-        </main>
-        <footer>
-
-        </footer>
+<div class="container-fluid d-flex align-items-start">
+    <nav>
+        <ul class="nav nav-pills flex-column border-end border-3 me-3 align-items-end" id="pills-tab" role="tablist">
+            <li class="nav-item" role="presentation">
+                <button class="nav-link text-primary fw-semibold active position-relative" data-bs-toggle="pill"
+                    data-bs-target="#pills-professores" type="button" role="tab" aria-controls="pills-professores"
+                    aria-selected="true">Professores</button>
+            </li>
+            <li class="nav-item" role="presentation">
+                <button class="nav-link text-primary fw-semibold position-relative" data-bs-toggle="pill"
+                    data-bs-target="#pills-alunos" type="button" role="tab" aria-controls="pills-alunos"
+                    aria-selected="false">Alunos</button>
+            </li>
+            <li class="nav-item" role="presentation">
+                <button class="nav-link fw-semibold position-relative" data-bs-toggle="pill"
+                    data-bs-target="#pills-disciplinas" type="button" role="tab" aria-controls="pills-disciplinas"
+                    aria-selected="false">Disciplinas</button>
+            </li>
+            <li class="nav-item" role="presentation">
+                <button class="nav-link fw-semibold position-relative" data-bs-toggle="pill"
+                    data-bs-target="#pills-relatorios" type="button" role="tab" aria-controls="pills-relatorios"
+                    aria-selected="false">Relatorios</button>
+            </li>
+        </ul>
+    </nav>
+    <div class="tab-content border rounded-3 border-primary p-3 text-danger w-100" id="pills-tabContent">
+        <div class="tab-pane fade show active" id="pills-professores" role="tabpanel"
+            aria-labelledby="pills-professores-tab">
+            <H2>Professores</H2>
+        </div>
+        <div class="tab-pane fade" id="pills-alunos" role="tabpanel" aria-labelledby="pills-alunos-tab">
+            <H2>Alunos</H2>
+        </div>
+        <div class="tab-pane fade" id="pills-disciplinas" role="tabpanel" aria-labelledby="pills-disciplinas-tab">
+            <H2>Disciplinas</H2>
+        </div>
+        <div class="tab-pane fade" id="pills-relatorios" role="tabpanel" aria-labelledby="pills-relatorios-tab">
+            <H2>Relatorios</H2>
+        </div>
     </div>
-</article>
-
+</div>
 {% endblock %}
