--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -34,7 +34,7 @@
         </nav>
     </header>
 
-    <main>
+    <main class="h-100">
         {% block main %}{% endblock %}
     </main>
     <div>
