--- a/app/templates/admin/admin.html
+++ b/app/templates/admin/admin.html
@@ -1,27 +1,31 @@
 {% extends 'home.html'%}
 {% block main %}
-<div class="container-fluid d-flex align-items-start">
+<div class="container-fluid d-flex align-items-start hidden" id="admin-container">
     <nav>
         <ul class="nav nav-pills flex-column border-end border-3 me-3 align-items-end" id="pills-tab" role="tablist">
             <li class="nav-item" role="presentation">
-                <button onclick="handleClick('{{ url_for('admin.professores.professores') }}')" class="btn-admin-panel nav-link text-primary fw-semibold active position-relative" data-bs-toggle="pill"
+                <button onclick="handleClick('{{ url_for('admin.professores.professores') }}')"
+                    class="btn-admin-panel nav-link text-primary fw-semibold position-relative" data-bs-toggle="pill"
                     data-bs-target="#pills-professores" type="button" role="tab" aria-controls="pills-professores"
-                    aria-selected="true">Professores</button>
+                    aria-selected="false" data-url="{{ url_for('admin.professores.professores') }}">Professores</button>
             </li>
             <li class="nav-item" role="presentation">
-                <button onclick="handleClick('{{ url_for('admin.alunos.alunos') }}')" class="btn-admin-panel nav-link text-primary fw-semibold position-relative" data-bs-toggle="pill"
+                <button onclick="handleClick('{{ url_for('admin.alunos.alunos') }}')"
+                    class="btn-admin-panel nav-link text-primary fw-semibold position-relative" data-bs-toggle="pill"
                     data-bs-target="#pills-alunos" type="button" role="tab" aria-controls="pills-alunos"
-                    aria-selected="false">Alunos</button>
+                    aria-selected="false" data-url="{{ url_for('admin.alunos.alunos') }}">Alunos</button>
             </li>
             <li class="nav-item" role="presentation">
-                <button onclick="window.location.href='{{ url_for('admin.disciplinas.disciplinas') }}'" class="btn-admin-panel nav-link fw-semibold position-relative" data-bs-toggle="pill"
+                <button onclick="window.location.href='{{ url_for('admin.disciplinas.disciplinas') }}'"
+                    class="btn-admin-panel nav-link fw-semibold position-relative" data-bs-toggle="pill"
                     data-bs-target="#pills-disciplinas" type="button" role="tab" aria-controls="pills-disciplinas"
-                    aria-selected="false">Disciplinas</button>
+                    aria-selected="false" data-url="{{ url_for('admin.disciplinas.disciplinas') }}">Disciplinas</button>
             </li>
             <li class="nav-item" role="presentation">
-                <button onclick="window.location.href='{{ url_for('admin.relatorios.relatorios') }}'" class="btn-admin-panel nav-link fw-semibold position-relative" data-bs-toggle="pill"
+                <button onclick="window.location.href='{{ url_for('admin.relatorios.relatorios') }}'"
+                    class="btn-admin-panel nav-link fw-semibold position-relative" data-bs-toggle="pill"
                     data-bs-target="#pills-relatorios" type="button" role="tab" aria-controls="pills-relatorios"
-                    aria-selected="false">Relatorios</button>
+                    aria-selected="false" data-url="{{ url_for('admin.relatorios.relatorios') }}">Relatorios</button>
             </li>
         </ul>
     </nav>
@@ -31,10 +35,10 @@
 
         {% block alunos %}
         {% endblock %}
-        
+
         {% block disciplinas %}
         {% endblock %}
-        
+
         {% block Relatorios %}
         {% endblock %}
     </div>
